--- a/package.json
+++ b/package.json
@@ -25,8 +25,5 @@
   "bugs": {
     "url": "https://github.com/Shalom101/NodeJsApi/issues"
   },
-	"engines": {
-    "node": "7.10.0"
-  }  
-
+  "homepage": "https://github.com/Shalom101/NodeJsApi#readme"
 }
